--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ main {
 .navbar {
     background-color: #004080;
     overflow: hidden;
-    text-align: center;
+    text-align: right;
     margin-top: 10px;
     border-radius: 1rem;
 }
