--- a/stylecont.css
+++ b/stylecont.css
@@ -20,7 +20,7 @@ header {
 .navbar ul {
     list-style-type: none;
     padding: 0;
-    text-align: center;
+    text-align: right;
 }
 
 .navbar ul li {
@@ -169,3 +169,38 @@ button:disabled {
     }
   }
   
+  .hero {
+    max-width: 1100px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #005bb5;
+    border-radius: 8px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    color: white;
+    text-align: center;
+}
+
+.hero h2 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+}
+
+.hero p {
+    font-size: 1.2rem;
+    margin-bottom: 30px;
+}
+
+.cta-button {
+    background-color: #fcb41e;
+    color: #fff;
+    padding: 15px 30px;
+    font-size: 1.2rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.cta-button:hover {
+    background-color: #e0a10b;
+}
